--- a/api_server/package.json
+++ b/api_server/package.json
@@ -12,9 +12,9 @@
     "express": "~4.16.0",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "pm2": "^3.2.2"
   },
   "devDependencies": {
-    "pm2": "^3.2.2"
   }
 }
