--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web:
-    image: node:latest
+    image: node:10.13.0
     command: /code/start.sh
     container_name: agens_http_api
     volumes:
@@ -16,7 +16,7 @@ services:
     restart: always
 
   db:
-    image: callin/agensgraph
+    image: callin2/agens_http
     container_name: agens_db
     ports:
       - '5432:5432'
